--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.2",
+    "sweetalert": "^2.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
